app/globals.css
/* ... */
input[type='number'] {
  -moz-appearance: textfield;
}

html,
body {
  max-width: 100vw;
  height: 100%;
  overflow-x: hidden;
}

body {
  color: var(--light);
  background: var(--darker);
  font-family: 'DM Sans', sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

p {
  cursor: default;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

.header {
  height: 70px;
  width: 100%;
  color: var(--light);
  border-bottom: solid var(--accent-dark);
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 20px 130px;
}

div.main {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.body {
  overflow-y: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  height: 100%;
  padding: 50px var(--body-padding-side) 80px var(--body-padding-side);
}

.title {
  font-size: 32px;
  font-weight: bold;
  text-wrap: nowrap;
}

.collection-header-container {
  display: flex;
  flex-direction: column;
  padding: 30px 0px 30px 0px;
  align-items: end;
}

.collection-header {
  display: flex;
  width: calc(var(--game-card-width));
  justify-content: space-between;
  align-items: center;
}

.collection-title {
  display: flex;
  gap: 60px;
  align-items: center;
}

.main-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  align-items: center;
}

.gameGrid {
  display: grid;
  gap: var(--game-card-grid-gap);
  width: fit-content;
}

@media (width >= 1190px) {
  .gameGrid {
    grid-template-columns: var(--game-card-width) var(--game-card-width);
  }
  .collection-header {
    width: calc(var(--game-card-width) * 2 + var(--game-card-grid-gap));
  }
}

@media (width >= 1670px) {
  .gameGrid {
    grid-template-columns: var(--game-card-width) var(--game-card-width) var(--game-card-width);
  }
  .collection-header {
    width: calc(var(--game-card-width) * 3 + var(--game-card-grid-gap) * 2);
  }
}

.gameCard {
  width: var(--game-card-width);
  height: 144px;
  background-color: var(--dark);
  padding: 15px;
  display: flex;
  flex-direction: row;
  gap: 20px;
  cursor: pointer;
}
.gameCard:hover {
  background: var(--dark-hover);
}

.gameInfo {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.gameDetails {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.gameStatus,
.gameType {
  display: flex;
  align-items: center;
  padding: 2px 6px;
  text-transform: uppercase;
  font-size: 12px;
  font-weight: 700;
  cursor: default;
  height: fit-content;
}

.gameType.Main {
  color: var(--light);
  border: var(--light) solid 1px;
}

.gameStatus.Completed {
  background-color: var(--main);
  color: var(--light);
}

.gameStatus.Incomplete {
  background-color: var(--light);
  color: var(--dark);
}

.gameStatus.Playing {
  background-color: var(--playing);
  color: var(--dark-green);
}

.gameCopy {
  display: inline-flex;
  gap: 10px;
  align-items: center;
  color: var(--background);
}

.gameTitle {
  font-size: 20px;
  font-weight: 700;
  line-height: 20px;
  color: var(--light);
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
  line-clamp: 3;
  overflow: hidden;
}

.squareContainer {
  overflow: hidden;
  width: 114px;
  height: 114px;
  position: relative;
}

.form-field {
  display: flex;
  flex-direction: column;
  gap: 5px;
  width: 100%;
}
.form-field.horizontal {
  display: flex;
  flex-direction: row;
  width: 100%;
  gap: 20px;
}

.sign-up-container,
.login-container {
  border: var(--dark) 3px solid;

  display: flex;
  gap: 20px;
  flex-direction: column;
  width: 500px;
  padding: 60px;
}

.sign-up-form {
  display: flex;
  flex-direction: column;
  width: 100%;
  gap: 10px;
  align-items: end;
}

.form-info {
  color: var(--accent-dark);
  font-weight: 700;
}
.form-info-white {
  font-weight: 700;
}
.form-info-white.big {
  font-size: 24px;
}
.form-info-pale {
  color: var(--medium);
  font-weight: 500;
}
.form-error {
  color: var(--error-text);
  font-weight: 700;
}

.password-container {
  display: flex;
  justify-content: space-between;
  position: relative;
  align-items: center;
}

.password-container > input[type='password'],
.password-container > input[type='text'] {
  width: 100%;
}
.password-toggle {
  position: absolute;
  right: 5px;
  color: var(--accent-dark);
}
.password-toggle:hover {
  color: var(--accent-dark-hover);
}
::-ms-reveal,
::-ms-clear {
  display: none;
}

input[type='submit'],
button,
.button {
  font-family: 'DM Sans', sans-serif;
  display: flex;
  padding: 10px 30px;
  font-size: 16px;
  font-weight: bold;
  width: fit-content;
  outline: none;
  border: none;
  gap: 5px;
  align-items: center;
  justify-content: center;
  text-wrap: nowrap;
}

input,
select,
.game-info-field,
textarea {
  padding: 10px;
  font-size: 16px;
  font-family: 'DM Sans', sans-serif;
  background: var(--dark);
  border: none;
  color: var(--background);
  outline: none;
  width: 100%;
  cursor: pointer;
}
textarea {
  resize: none;
  cursor: text;
}
.game-info-field {
  cursor: default;
  min-height: 41px;
}
.game-info-field.large,
textarea.large {
  vertical-align: top;
  height: 130px;
  overflow-y: auto;
  word-wrap: break-word;
  overflow-x: hidden;
  text-align: start;
  white-space: pre-line;
}
select {
  border-right: 10px solid transparent;
}
a {
  color: var(--accent-dark);
}
a:hover {
  color: var(--accent-dark-hover);
}

.sign-up-form > .form-field > input,
.password-container > input {
  padding: 10px;
  font-size: 16px;
  font-family: 'DM Sans', sans-serif;
  background: var(--dark);
  border: none;
  color: var(--background);
  outline: none;
  width: 100%;
  cursor: pointer;
}
/* ... */

